...
    
    func setupSections() -> [AlertSection]  {
        return [
            AlertSection(
                title: AlertSectionType.toasts.rawValue,
                buttons: [
                    AlertButton(title: "Short Toast - top, slide") {
                        let id = UUID().uuidString
                        self.saveAlertID(id, forSection: .toasts)
                        let alertConfig = ToastConfig(message: "Transaction was completed successfully!",
                                                      style: .success,
                                                      maxWidth: .infinity,
                                                      closeAction: { [weak self] in self?.iosAlertlibrary.dismissAlert(id: id) },
...
                                                                                               opacity: (start: 0, end: 1),
                                                                                               scaleEffect: (from: 0.5, anchor: .center)))
                        
                        let container = BasicContainerView(content: alert, containerConfig: containerConfig)
                        self.iosAlertlibrary.showAlert(container: container)
                    },
                    AlertButton(title: "Expanded Toast - mid, bounce") {
                        let id = UUID().uuidString
                        self.saveAlertID(id, forSection: .toasts)
                        let alertConfig = ToastConfig(message: "Update your payment info!",
                                                      style: .info,
                                                      maxWidth: .infinity,
                                                      closeAction: {},
                                                      isExpandable: true,
                                                      expandedToastConfig: ExpandedToastConfig(title: "Update your payment info!",
                                                                                               description: "The saved credit card for your account has expired. Update your payment information to complete the purchase. \n\n[TEST]The saved credit card for your account has expired. Update your payment information to complete the purchase. \n[TEST]The saved credit card for your account has expired. U
                                                                                               style: .info,
                                                                                               buttonConfig: AlertButtonConfig(title: "I got it!",
                                                                                                                               style: .info,
                                                                                                                               action: { [weak self] in self?.iosAlertlibrary.dismissAlert(id: id)})))
                        
                        let alert = ToastView(config: alertConfig)
                        let containerConfig = ContainerConfig(id: id,
                                                              duration: 5,
...
                    }
                ]
            ),
            AlertSection(
                title: AlertSectionType.commonAlerts.rawValue,
                buttons: [
                    AlertButton(title: "Alert - one button, mid, slide") {
                        let id = UUID().uuidString
                        self.saveAlertID(id, forSection: .commonAlerts)
                        let alertConfig = AlertConfig(icon: "trash.fill",
                                                      lightModeIconColor: .blue,
                                                      darkModeIconColor: .blue.opacity(0.8),
                                                      title: "Data storage is full!",
...
                                                      lightModeMessageColor: .gray,
                                                      darkModeMessageColor: .gray,
                                                      lightModeBackgroundColor: .white,
                                                      darkModeBackgroundColor: Color(white: 0.15),
                                                      dismissAction: { [weak self] in self?.iosAlertlibrary.dismissAlert(id: id) },
                                                      cancelButtonConfig: nil,
                                                      continueButtonConfig: AlertButtonConfig(title: "Upgrade Plan",
                                                                                              action: { [weak self] in self?.iosAlertlibrary.dismissAlert(id: id) },
                                                                                              lightModeTitleColor: .white,
                                                                                              darkModeTitleColor: .white,
                                                                                              lightModeBackgroundColor: .blue,
                                                                                              darkModeBackgroundColor: .blue))
                        
...
